--- a/public/game/index.css
+++ b/public/game/index.css
@@ -24,6 +24,15 @@ html, body {
   display: none;
 }
 
+.dot {
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  background-color: white;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+}
+
 
 /* Offline page */
 
